# gotohyon

./: .gitignore  CMakeLists.txt  Makefile  upDia.sh
dia2code/: CMakeLists.txt  build.bat  build.sh
dia2code/dia2code-0.8.7/dia2code/: dia2code.h  parse_diagram.c
dia2code/src/: dia2code.c  dia2code.h  generate_code_cpp.c  includes.c  main.c  scan_tree.c  source_parser.c
docker/: check_plt_repo.sh  check_repo.sh  plt-build  plt-evince  plt-initial  plt-qt5  run_all.sh  run_docker_x11.sh  validate.sh
rapport/: ModeleRapport.odt
res/: replay.json
src/: ai.dia  client.dia  engine.dia  main.cpp  module.dia  render.dia  state.dia  state.dia.autosave  state.hpp
src/client/: main.cpp
src/client/client/: Client.h
src/client/render/: DrawElement.cpp  DrawLayer.cpp  DrawManager.cpp  GUIbar.cpp  GameObjectLayer.cpp  GameObjectLayer.h  GameObjectTileSet.h  GuiBox.cpp  GuiButton.cpp  GuiLayer.cpp  InputManager.cpp  Layer.cpp  Layer.h  MapSurface.cpp  OnMapLayer.cpp  PlayerAction.cpp  StateLayer.cpp  StateLayer.h  StateTileSet.cpp  StateTileSet.h  Surface.cpp  Surface.h  TerrainLayer.cpp  TerrainLayer.h  TerrainTileSet.cpp  TerrainTileSet.h  Tile.cpp  Tile.h  TileSet.cpp  TileSet.h
src/server/: main.cpp  server.h
src/server/server/: AbstractService.cpp  AbstractService.h  Game.cpp  Game.h  HttpStatus.h  Player.cpp  Player.h  PlayerService.cpp  PlayerService.h  ServiceException.cpp  ServiceException.h  ServiceManager.cpp  ServiceManager.h  VersionService.cpp  VersionService.h
src/shared/: state.cpp  state.h
src/shared/ai/: AI.cpp  DeepAI.cpp  HeuristicAI.cpp  RandomAI.cpp
src/shared/engine/: Command.cpp  Engine.cpp  HandleAttack.cpp  HandleCanAttack.cpp  HandleCreation.cpp  HandleDamage.cpp  HandleEndGame.cpp  HandleGrowth.cpp  HandleMovement.cpp  HandleSaveGame.cpp  HandleSelectedObject.cpp  HandleStartGame.cpp  HandleTurn.cpp  LoadCommand.cpp  SignalStartRecord.cpp  SignalStopRecord.cpp
src/shared/state/: Archer.cpp  Barrack.cpp  Building.cpp  BuildingType.cpp  Construction.cpp  Event.cpp  Exemple.h  Farm.cpp  Farmer.cpp  Forest.cpp  GameObject.cpp  Grassland.cpp  Infantry.cpp  IngameState.cpp  Map.cpp  MapEvent.cpp  Mine.cpp  Mountain.cpp  Observable.cpp  Observer.cpp  Player.cpp  Position.cpp  Property.cpp  State.cpp  StateEvent.cpp  Swamp.cpp  Terrain.cpp  Town.cpp  Turret.cpp  Unit.cpp  Water.cpp
src/state/: Exemple.cpp  Exemple.h
